# 3Beans

./: .gitignore  Makefile  README.md
.github/workflows/: android.yml  autobuild.yml
meta/: com.hydra.threebeans.yml
src/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: CMakeLists.txt  egl_context.cpp  egl_context.h  gpu_render_ogl_gles.cpp  gpu_shader_glsl_gles.cpp  interface.cpp
src/android/app/src/main/cpp/shim/epoxy/: gl.h
src/android/app/src/main/java/com/hydra/threebeans/: ControllerMappingActivity.kt  EmulationActivity.kt  EmulationRenderer.kt  FrameStore.kt  GameAdapter.kt  GameInfo.kt  InputOverlay.kt  KeyMap.kt  LayoutEditorView.kt  MainActivity.kt  NativeLibrary.kt  PerGameSettings.kt  ScreenLayout.kt  SecondaryDisplay.kt  SettingsActivity.kt  SystemFiles.kt  SystemFilesActivity.kt  ThreeBeansApplication.kt
src/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_menu.xml  ic_warning.xml
src/android/app/src/main/res/layout/: activity_controller_mapping.xml  activity_emulation.xml  activity_main.xml  activity_settings.xml  activity_system_files.xml  item_game.xml  item_system_file.xml
src/android/app/src/main/res/menu/: menu_controller_mapping.xml  menu_main.xml
src/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/core/: core.cpp  settings.cpp  settings.h
src/core/arm/: cp15.cpp
src/core/gpu/: gpu.cpp  gpu.h  gpu_render_ogl.cpp  gpu_render_ogl.h  gpu_shader_glsl.cpp  gpu_shader_glsl.h
src/core/io/: block_device.h  cartridge.cpp  file_block.cpp  file_block.h  i2c.cpp  i2c.h  sd_mmc.cpp  sd_mmc.h  virtual_fat.cpp  virtual_fat.h
src/core/io/fatfs/: diskio.c  ffconf.h  vfat_bridge.h
src/core/memory/: memory.h
src/desktop/: b3_canvas_soft.cpp  b3_frame.cpp  b3_frame.h  gpu_dialog.cpp  gpu_dialog.h
